# claude-orchestrator

./: .gitignore  CLAUDE.md  README.md  orchestrator.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  latest-artifacts.yml  release-artifacts.yml
mcp-permission-bridge/: package-lock.json  package.json
mcp-permission-bridge/src/: index.ts
mobile/: App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json
scripts/: manual-release.sh
src/: App.css  App.tsx  constants.ts  index.css  main.tsx  themes.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: god-workspace-skill.md
src-tauri/src/: database.rs  git.rs  helpers.rs  http_server.rs  lib.rs  main.rs  process_manager.rs  types.rs  websocket_server.rs
src-tauri/src/claude/: discovery.rs  env.rs  mod.rs  models.rs  runner.rs  stream.rs
src-tauri/src/commands/: agent.rs  checks.rs  files.rs  god_workspace.rs  mod.rs  pr.rs  repository.rs  server.rs  skills.rs  workspace.rs
src/components/: CanvasPanel.tsx  FileTree.tsx  GroupDropZone.tsx  LinkifiedInlineText.tsx  MarkdownCodeBlock.tsx  MarkdownMessage.tsx  Modal.tsx  OrchestrationGraph.tsx  PermissionCard.tsx  QuestionCard.tsx  SettingsModal.tsx  SkillSidebarCard.tsx  SkillsMarketplace.tsx  SortableGroupItem.tsx  SortableWorkspaceItem.tsx  ThinkingTimer.tsx  ToolbarDropdown.tsx
src/hooks/: useAgentEvents.ts  useOrchestrationEvents.ts  usePanelResize.ts  (+2 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js
(+31 files in other folders)
