[package]
name = "claude-orchestrator"
version = "0.1.0"
description = "A macOS app for managing multiple Claude CLI agents"
authors = ["ron"]
edition = "2021"

[lib]
name = "claude_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
